css/main.css
/*! HTML5 Boilerplate v5.3.0 | MIT License | https://html5boilerplate.com/ */

/*
 * What follows is the result of much research on cross-browser styling.
 * Credit left inline and big thanks to Nicolas Gallagher, Jonathan Neal,
 * Kroc Camen, and the H5BP dev community and team.
 */

/* ==========================================================================
   Base styles: opinionated defaults
   ========================================================================== */

html {
    color: #222;
    font-size: 1em;
    line-height: 1.4;
}

/*
 * Remove text-shadow in selection highlight:
 * https://twitter.com/miketaylr/status/12228805301
 *
 * These selection rule sets have to be separate.
 * Customize the background color to match your design.
 */

::-moz-selection {
    background: #b3d4fc;
    text-shadow: none;
}

::selection {
    background: #b3d4fc;
    text-shadow: none;
}

/*
 * A better looking default horizontal rule
 */

hr {
    display: block;
    height: 1px;
    border: 0;
    border-top: 1px solid #ccc;
    margin: 1em 0;
    padding: 0;
}

/*
 * Remove the gap between audio, canvas, iframes,
 * images, videos and the bottom of their containers:
 * https://github.com/h5bp/html5-boilerplate/issues/440
 */

audio,
canvas,
iframe,
img,
svg,
video {
    vertical-align: middle;
}

/*
 * Remove default fieldset styles.
 */

fieldset {
    border: 0;
    margin: 0;
    padding: 0;
}

/*
 * Allow only vertical resizing of textareas.
 */

textarea {
    resize: vertical;
}

/* ==========================================================================
   Browser Upgrade Prompt
   ========================================================================== */

.browserupgrade {
    margin: 0.2em 0;
    background: #ccc;
    color: #000;
    padding: 0.2em 0;
}

/* ==========================================================================
   Author's custom styles
   ========================================================================== */

@media (min-width: 1023px) and (max-width: 1199px) {  /*disable Bootstrap breakpoint between these widths for convenience*/
    .container {
        width: 1018px;
    }
}

body {
    background-color: rgba(184, 184, 184, 0.33);
    font-size: 20px;
}

.header {
    margin: 0 0 30px 0;
    color: #eee;
    background-color: #326e9e;
    box-shadow: 0 3px 3px 0 rgba(0, 0, 0, 0.2), 0 4px 4px 0 rgba(0, 0, 0, 0.19);
}

/* Make the masthead heading the same height as the navigation */
.header h3 {
    line-height: 37px;
    font-size: 30px;
    color: #eeeeee;
    margin-top: 9px;
}

ul {
    list-style: none;
    float: right;
    padding-left: 0 !important;
}

.btn {
    background-color: #c6c6c6;
    margin: 9px 0 0 0;
    color: #326e9e;
    font-weight: 500;
    font-size: 18px;
    padding: 4px 12px;

}

/*.btn:hover {
    background-color: #eee;
}*/

.activeBtn {
    background-color: #eee;
    color: #333;
}

.inactiveBtn {
    background-color: #c6c6c6;
    color: #326e9e;
}

.jumbotron {
    border: 1px #000000 solid;
    margin-bottom: 20px;

}

.intro-text {
    text-align: center;
    line-height: 1.8em;
    padding: 0 25px;
}

.vertical-align {
    display: flex;
    align-items: center;
}

.avatar {
    border: 1px #000000 solid;
    border-radius: 5px;
}

/* Fixes problems for extra small devices (767px and down) */
@media (max-width: 767px) {

    h3 {
        text-align: center;
        margin-bottom: 2px;
    }

    ul {
        display: flex;
        justify-content: center;
        float: none;
        margin-bottom: 5px;
    }

    .btn {
        margin: 6px 3px 5px 3px;
    }


    .row.vertical-align {
        display: block; /* Turn off the flexible box layout so that avatar appears above intro-text */
    }

    .avatar {
        margin: 0 auto 25px auto; //centers avatar on small screen sizes
    }

    .avatar.img-responsive {
        max-width: 200px !important;
    }
}

.portfolio.jumbotron, .contact.jumbotron {
    padding-top: 30px;
}

.sortMenu {
    margin: 45px auto 30px;
    float: none;
    font-size: 21px;
    text-align: center;
}


@media(max-width: 370px) {
    .sortMenu {
        font-size: 18px;
    }
}

.sortBtn {
    color: #333;
    text-decoration: none !important;
    cursor: pointer;
}

.sortBtnActive {
    color: #337ab7;
}

.portfolio .row .img-responsive {
    border: 1px #000000 solid;
    border-radius: 5px;
    margin-bottom: 20px;
    cursor: pointer;
}

.image-zoom {
    position: absolute;
    right: 20px;
    top: 3px;
    width: 18px;
    cursor: pointer;
}

.modal-dialog{
    width: 85%;
    margin: 50px auto 50px auto;
}



.modal-content {
    background: white;
    max-height: 80vh;
}

.modal-body {
    padding: 0;

}

.modal-footer {
    background-color: white;
    border-bottom-right-radius: 6px;
    border-bottom-left-radius: 6px;
    font-size: 16px;
    text-align: center;
    overflow-y: auto;
    max-height: 27vh;
}

.modal-title {
    text-align: center;
    padding-bottom: 14px;
    font-size: 19px;
}

.item img {
    border-top-left-radius: 6px;
    border-top-right-radius: 6px;
    margin:auto;
    padding: 8px;

}

.carousel-inner>.item>a>img, .carousel-inner>.item>img {
    max-height: 55vh;
    cursor: pointer;
}


.carousel-control {
    opacity: 1;
    color: lightgray;
    width: 9%;
}

.glyphicon {
    color: lightgray;
}

/*.glyphicon:hover {
    color: darkgray;
}*/

.glyphicon-chevron-right {
    right: 10% !important;
}

.glyphicon-chevron-left {
    left: 10% !important;
}

/*.carousel-control:hover >*, .close:hover {
    opacity: 1;
    color: darkgray;
}*/

.right.carousel-control, .left.carousel-control {
    background-image: none;
}

.right.carousel-control {
    right: -3%;
}

.left.carousel-control {
    left: -3%;
}

.close {
    top: -40px;
    right: 1px;
    position: absolute;
    z-index: 1;
    font-size: 38px;
    color: lightgray;
    opacity: 1;
    outline: none;
}



.contact-info {
    margin-top: 65px;
    font-size: 24px;
}

@media(max-width: 766px) {
    .contact-info {
        margin-top: 45px;
    }
}

.contact div {
    text-align: center;
    line-height: 45px;
}


h2 {
    width: 85%;
    margin: 20px auto 15px;
    color: #666;
    font-weight: bold;
    font-size: 34px;
}

@media (max-width: 1022px) {
    h2 {
        text-align:center;
    }
}

hr.emblem-dark {
    margin: 40px auto 30px;
    padding: 0;
    width: 80%;
    border: 0;
    overflow: visible;

    border-top: solid 3px;
    text-align: center;
    border-color: #666;
}

hr.emblem-dark::after {
    content: "\F121";
    font-family: fontawesome;
    display: inline-block;
    position: relative;
    top: -0.77em;
    padding: 0 20px;
    font-size: 2em;
    color: #666;
    background-color: #eee;
}



@media (min-width: 1023px) {
    hr.emblem-dark {
        margin-top: -30px;
        margin-right: 6%;
        text-align: right;
        max-width: 585px;
    }

    hr.emblem-dark::after {
        right: 0;
        padding-right: 0;
    }

    .intro-text hr.emblem-dark {
        margin-top: 45px;
        max-width: 85%;
        margin-bottom: 40px;
    }

    .portfolio hr.emblem-dark {
        max-width: 61%;
    }

    .contact hr.emblem-dark {
        max-width: 58%;
    }
}

@media (min-width: 1200px) {
    .portfolio hr.emblem-dark {
        max-width: 64%;
    }

    .contact hr.emblem-dark {
        max-width: 61%;
    }
}








/* ==========================================================================
   Helper classes
   ========================================================================== */

/*
 * Hide visually and from screen readers
 */

.hidden {
    display: none !important;
}

/*
 * Hide only visually, but have it available for screen readers:
 * http://snook.ca/archives/html_and_css/hiding-content-for-accessibility
 */

.visuallyhidden {
    border: 0;
    clip: rect(0 0 0 0);
    height: 1px;
    margin: -1px;
    overflow: hidden;
    padding: 0;
    position: absolute;
    width: 1px;
}

/*
 * Extends the .visuallyhidden class to allow the element
 * to be focusable when navigated to via the keyboard:
 * https://www.drupal.org/node/897638
 */

.visuallyhidden.focusable:active,
.visuallyhidden.focusable:focus {
    clip: auto;
    height: auto;
    margin: 0;
    overflow: visible;
    position: static;
    width: auto;
}

/*
 * Hide visually and from screen readers, but maintain layout
 */

.invisible {
    visibility: hidden;
}

/*
 * Clearfix: contain floats
 *
 * For modern browsers
 * 1. The space content is one way to avoid an Opera bug when the
 *    `contenteditable` attribute is included anywhere else in the document.
 *    Otherwise it causes space to appear at the top and bottom of elements
 *    that receive the `clearfix` class.
 * 2. The use of `table` rather than `block` is only necessary if using
 *    `:before` to contain the top-margins of child elements.
 */

.clearfix:before,
.clearfix:after {
    content: " "; /* 1 */
    display: table; /* 2 */
}

.clearfix:after {
    clear: both;
}

/* ==========================================================================
   EXAMPLE Media Queries for Responsive Design.
   These examples override the primary ('mobile first') styles.
   Modify as content requires.
   ========================================================================== */

@media only screen and (min-width: 35em) {
    /* Style adjustments for viewports that meet the condition */
}

@media print,
       (-webkit-min-device-pixel-ratio: 1.25),
       (min-resolution: 1.25dppx),
       (min-resolution: 120dpi) {
    /* Style adjustments for high resolution devices */
}

/* ==========================================================================
   Print styles.
   Inlined to avoid the additional HTTP request:
   http://www.phpied.com/delay-loading-your-print-css/
   ========================================================================== */

@media print {
    *,
    *:before,
    *:after,
    *:first-letter,
    *:first-line {
        background: transparent !important;
        color: #000 !important; /* Black prints faster:
                                   http://www.sanbeiji.com/archives/953 */
        box-shadow: none !important;
        text-shadow: none !important;
    }

    a,
    a:visited {
        text-decoration: underline;
    }

    a[href]:after {
        content: " (" attr(href) ")";
    }

    abbr[title]:after {
        content: " (" attr(title) ")";
    }

    /*
     * Don't show links that are fragment identifiers,
     * or use the `javascript:` pseudo protocol
     */

    a[href^="#"]:after,
    a[href^="javascript:"]:after {
        content: "";
    }

    pre,
    blockquote {
        border: 1px solid #999;
        page-break-inside: avoid;
    }

    /*
     * Printing Tables:
     * http://css-discuss.incutio.com/wiki/Printing_Tables
     */

    thead {
        display: table-header-group;
    }

    tr,
    img {
        page-break-inside: avoid;
    }

    img {
        max-width: 100% !important;
    }

    p,
    h2,
    h3 {
        orphans: 3;
        widows: 3;
    }

    h2,
    h3 {
        page-break-after: avoid;
    }
}

